--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "webpack serve --mode=development --open",
     "build": "webpack --config webpack-prod.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Muhammad Ahsan Ayaz<ahsan.ubitian@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
